--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -1,3 +1,23 @@
+@font-face {
+    font-family: 'Mark Pro Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Mark Pro Regular'), url('../fonts/MARKPRO.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Mark Pro Medium';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Mark Pro Medium'), url('../fonts/MARKPROMEDIUM.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Mark Pro Bold';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Mark Pro Bold'), url('../fonts/MARKPROBOLD.woff') format('woff');
+}
 
   .ftr-vrsn {
     position: fixed;
@@ -1989,6 +2009,291 @@
 
     .width340 {
       width: 100% !important;
+    }
+
+    .CustomerDetails {
+        font-size: 14px;
+        text-align: left;
+        font-family: 'Mark Pro Medium';
+    }
+
+    .BankDetails {
+        font-size: 14px;
+        text-align: right;
+        font-family: 'Mark Pro Medium';
+    }
+
+    .ConactCenterDiv {
+        font-size: 14px;
+        font-family: 'Mark Pro Medium';
+        text-align: right;
+        padding-right: 1.25rem;
+    }
+
+    .customTable td {
+        padding: 0px 25px;
+        font-family: 'Mark Pro Regular';
+        font-size: 14px;
+    }
+
+    .customTable th {
+        padding: 0px 25px;
+        font-size: 14px;
+    }
+
+    .InvestorPermanaceTable td {
+        padding: 0px 25px;
+        font-family: 'Mark Pro Regular';
+    }
+
+
+    .ServicesDiv {
+        background-color: #f3f3f3;
+        height: 250px;
+        font-family: 'Mark Pro Regular';
+        padding: 1.5rem !important;
+    }
+
+    .serviceHeader {
+        font-size: 16px;
+        color: #2d6444 !important;
+        font-weight: 700;
+        font-family: 'Mark Pro Medium';
+    }
+
+    .LoanTransactionTable th {
+        background-color: #1c6a41 !important;
+        color: #fff;
+        font-size: 14px;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .LoanTransactionTable tbody {
+        font-size: 14px;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .InvestmentBreakdown thead {
+        background-color: #1c6a41 !important;
+        color: #fff;
+        font-size: 14px;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .InvestmentBreakdown tbody {
+        font-size: 14px;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .InvestmentDetail td span {
+        color: #005b00 !important;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .card-body-header {
+        font-size: 18px;
+        font-family: 'Mark Pro Bold';
+        color: #2d6444 !important;
+    }
+
+    .card-body-sub-header {
+        font-size: 18px;
+        color: #005b00 !important;
+        font-family: 'Mark Pro Medium';
+        padding: 0px 25px;
+    }
+
+    .card-body-sub-header2 {
+        font-size: 14px;
+        font-family: 'Mark Pro Regular';
+        padding: 0px 25px;
+    }
+
+    .TotalAmountDetailsDiv {
+        background-color: #2d6444 !important;
+        padding: 10px 25px;
+        height: 70px;
+        color: #fff !important;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .InvestmentClosingBalanceDiv {
+        margin-top: 1rem !important;
+        padding-left: 25px;
+        margin-bottom: .25rem !important;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .Investment-nav-tabs {
+        font-family: 'Mark Pro Regular';
+    }
+
+    .ExplanatoryNotes {
+        font-family: 'Mark Pro Regular';
+        font-size: 14px;
+    }
+
+    .w-12 {
+        width: 12%;
+    }
+
+    .w-15 {
+        width: 15%;
+    }
+
+    .w-40 {
+        width: 40%;
+    }
+
+    .fnt-12 {
+        font-size: 12px;
+    }
+
+    .fnt-13 {
+        font-size: 13px;
+    }
+
+    .fnt-16 {
+        font-size: 16px;
+    }
+
+    .fnt-18 {
+        font-size: 18px;
+    }
+
+    .fnt-20 {
+        font-size: 20px;
+    }
+
+    .ht-30 {
+        height: 30px;
+    }
+
+    .ht-60 {
+        height: 60px;
+    }
+
+    .ptb-10_plr-25 {
+        padding: 10px 25px;
+    }
+
+    .ptb-5_plr-25 {
+        padding: 5px 25px;
+    }
+
+    .ptb-0_plr-25 {
+        padding: 0px 25px;
+    }
+
+    .pt-80px {
+        padding-top: 80px;
+    }
+
+    .InvestmentPermanaceDiv {
+        background-color: #f3f3f3;
+        padding-top: 1rem !important;
+        padding-bottom: 1rem !important;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .InvestorPermanaceTable {
+        width: 100%;
+        border-collapse: collapse;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .customTable {
+        width: 100%;
+        border-collapse: collapse;
+        font-family: 'Mark Pro Regular';
+        font-size: 14px;
+    }
+
+    .pl-25px {
+        padding-left: 25px;
+    }
+
+    .ftr-lt-span1 {
+        float: left;
+        margin-left: 35px;
+        color: #005b00 !important;
+        font-family: 'Mark Pro Medium'
+    }
+
+    .ftr-rt-span1 {
+        float: right;
+        margin-right: 35px;
+        color: #005b00 !important;
+        font-family: 'Mark Pro Bold';
+        font-size: 18px;
+    }
+
+    .ftr-rt-span2 {
+        float: right;
+        margin-right: 35px;
+        color: gray;
+        font-size: 12px;
+        font-family: 'Mark Pro Regular'
+    }
+
+    .bg-success-new {
+        background-color: #2d6444 !important;
+    }
+
+    .eConfirm-logo-container {
+        position: relative;
+        float: left !important;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .eConfirm-logo-date {
+        position: absolute;
+        bottom: 6px;
+        font-size: 11px;
+        padding-left: 1.25rem !important;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .paymentDueHeaderBlock {
+        background-color: #1c6a41 !important;
+        text-align: center;
+        padding-top: .25rem !important;
+        height: 30px;
+        color: white;
+        width: 20%;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .paymentDueFooterBlock {
+        background-color: #f3f3f3 !important;
+        text-align: center;
+        padding-top: .25rem !important;
+        height: 30px;
+        width: 20%;
+        font-family: 'Mark Pro Regular';
+    }
+
+    .text-success {
+        color: #005b00 !important;
+    }
+
+    .InvestmentProdDesc {
+        color: #005b00 !important;
+        font-family: 'Mark Pro Bold';
+    }
+
+    #HomeLoanDetailTable tr:first-child td {
+        font-family: 'Mark Pro Bold';
+        color: #005b00 !important;
+        padding-bottom: .5rem !important;
+        font-size: 20px;
+    }
+
+    #PersonalLoanDetailTable tr:first-child td {
+        font-family: 'Mark Pro Bold';
+        color: #005b00 !important;
+        padding-bottom: .5rem !important;
+        font-size: 20px;
     }
 
     .btn-cust {
