--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: 'Mark Pro Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Mark Pro Regular'), url('../fonts/MARKPRO.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Mark Pro Medium';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Mark Pro Medium'), url('../fonts/MARKPROMEDIUM.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Mark Pro Bold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Mark Pro Bold'), url('../fonts/MARKPROBOLD.woff') format('woff');
+}
+
 .ltr {
   $float-left: left;
   $float-right: right;
@@ -271,89 +292,118 @@
 
   .CustomerDetails {
     font-size: 14px;
-    font-weight: 600;
     text-align: left;
+    font-family: 'Mark Pro Medium';
   }
 
   .BankDetails {
-    font-size: 13px;
-    font-weight: 600;
+    font-size: 14px;
     text-align: right;
+    font-family: 'Mark Pro Medium';
   }
 
   .ConactCenterDiv {
     font-size: 14px;
-    font-weight: 600;
+    font-family: 'Mark Pro Medium';
     text-align: right;
     padding-right: 1.25rem;
   }
 
   .customTable td {
     padding: 0px 25px;
+    font-family: 'Mark Pro Regular';
+    font-size: 14px;
   }
 
   .customTable th {
     padding: 0px 25px;
+    font-size: 14px;
   }
 
   .InvestorPermanaceTable td {
     padding: 0px 25px;
+    font-family: 'Mark Pro Regular';
   }
 
-
   .ServicesDiv {
-    background-color: #e2dfdf;
-    height: 230px;
+    background-color: #f3f3f3;
+    height: 250px;
+    font-family: 'Mark Pro Regular';
+    padding: 1.5rem !important;
   }
 
   .serviceHeader {
     font-size: 16px;
-    color: #28a745 !important;
-    font-weight: 700
+    color: #2d6444 !important;
+    font-weight: 700;
+    font-family: 'Mark Pro Medium';
   }
 
   .LoanTransactionTable th {
-    background-color: #2d6444 !important;
+    background-color: #1c6a41 !important;
     color: #fff;
-    font-size: 13px;
-    font-family: Arial;
+    font-size: 14px;
+    font-family: 'Mark Pro Regular';
   }
 
   .LoanTransactionTable tbody {
-    font-size: 13px;
-    font-weight: Normal;
-    font-family: Arial;
+    font-size: 14px;
+    font-family: 'Mark Pro Regular';
   }
 
   .InvestmentBreakdown thead {
-    background-color: #2d6444 !important;
+    background-color: #1c6a41 !important;
     color: #fff;
     font-size: 14px;
-    font-weight: Bold;
-    font-family: Arial;
+    font-family: 'Mark Pro Regular';
   }
 
   .InvestmentBreakdown tbody {
-    font-size: 12px;
-    font-weight: Normal;
-    font-family: Arial;
+    font-size: 14px;
+    font-family: 'Mark Pro Regular';
   }
 
   .InvestmentDetail td span {
-    color: #28a745 !important;
-    padding-right: 30px;
+    color: #005b00 !important;
+    font-family: 'Mark Pro Regular';
   }
 
   .card-body-header {
     font-size: 18px;
-    font-weight: 600;
+    font-family: 'Mark Pro Bold';
     color: #2d6444 !important;
   }
 
   .card-body-sub-header {
     font-size: 18px;
-    color: #2d6444 !important;
+    color: #005b00 !important;
+    font-family: 'Mark Pro Medium';
     padding: 0px 25px;
+  }
+
+  .card-body-sub-header2 {
+    font-size: 14px;
+    font-family: 'Mark Pro Regular';
+    padding: 0px 25px;
+  }
+
+  .TotalAmountDetailsDiv {
+    background-color: #2d6444 !important;
+    padding: 10px 25px;
+    height: 70px;
+    color: #fff !important;
+    font-family: 'Mark Pro Regular';
+  }
+
+  .InvestmentClosingBalanceDiv {
+    margin-top: 1rem !important;
+    padding-left: 25px;
+    margin-bottom: .25rem !important;
+    font-family: 'Mark Pro Regular';
+  }
+
+  .Investment-nav-tabs {
+    font-family: 'Mark Pro Regular';
   }
 
   .w-12 {
@@ -368,12 +418,24 @@
     width: 40%;
   }
 
+  .fnt-12 {
+    font-size: 12px;
+  }
+
   .fnt-13 {
     font-size: 13px;
   }
 
+  .fnt-14 {
+    font-size: 14px;
+  }
+
   .fnt-16 {
     font-size: 16px;
+  }
+
+  .fnt-18 {
+    font-size: 18px;
   }
 
   .fnt-20 {
@@ -384,8 +446,16 @@
     height: 30px;
   }
 
+  .ht-35 {
+    height: 35px;
+  }
+
   .ht-60 {
     height: 60px;
+  }
+
+  .ht-70 {
+    height: 70px;
   }
 
   .ptb-10_plr-25 {
@@ -396,24 +466,32 @@
     padding: 5px 25px;
   }
 
+  .ptb-0_plr-25 {
+    padding: 0px 25px;
+  }
+
   .pt-80px {
     padding-top: 80px;
   }
 
   .InvestmentPermanaceDiv {
-    background-color: #e2dfdf;
+    background-color: #f3f3f3;
     padding-top: 1rem !important;
     padding-bottom: 1rem !important;
+    font-family: 'Mark Pro Regular';
   }
 
   .InvestorPermanaceTable {
     width: 100%;
     border-collapse: collapse;
+    font-family: 'Mark Pro Regular';
   }
 
   .customTable {
     width: 100%;
     border-collapse: collapse;
+    font-family: 'Mark Pro Regular';
+    font-size: 14px;
   }
 
   .pl-25px {
@@ -423,15 +501,15 @@
   .ftr-lt-span1 {
     float: left;
     margin-left: 35px;
-    color: #28a745 !important;
-    font-weight: 600
+    color: #005b00 !important;
+    font-family: 'Mark Pro Medium'
   }
 
   .ftr-rt-span1 {
     float: right;
     margin-right: 35px;
-    color: #28a745 !important;
-    font-weight: 800;
+    color: #005b00 !important;
+    font-family: 'Mark Pro Bold';
     font-size: 18px;
   }
 
@@ -440,6 +518,7 @@
     margin-right: 35px;
     color: gray;
     font-size: 12px;
+    font-family: 'Mark Pro Regular'
   }
 
   .bg-success-new {
@@ -449,32 +528,64 @@
   .eConfirm-logo-container {
     position: relative;
     float: left !important;
-    padding-left: 0.25rem !important;
+    font-family: 'Mark Pro Regular';
   }
 
   .eConfirm-logo-date {
     position: absolute;
     bottom: 6px;
-    font-size: 12px;
-    padding-left: 1.5rem !important;
-    color: #848683;
+    font-size: 11px;
+    padding-left: 1.25rem !important;
+    font-family: 'Mark Pro Regular';
   }
 
   .paymentDueHeaderBlock {
-    background-color: #2d6444 !important;
+    background-color: #1c6a41 !important;
     text-align: center;
-    padding-top: .25rem !important;
-    height: 30px;
+    padding-top: .5rem !important;
+    height: 35px;
     color: white;
     width: 20%;
+    font-size: 14px;
+    font-family: 'Mark Pro Regular';
   }
 
   .paymentDueFooterBlock {
-    background-color: #e2dfdf !important;
+    background-color: #f3f3f3 !important;
     text-align: center;
-    padding-top: .25rem !important;
-    height: 30px;
+    padding-top: .5rem !important;
+    height: 35px;
     width: 20%;
+    font-size: 14px;
+    font-family: 'Mark Pro Regular';
+  }
+
+  .text-success {
+    color: #005b00 !important;
+  }
+
+  .InvestmentProdDesc {
+    color: #005b00 !important;
+    font-family: 'Mark Pro Bold';
+  }
+
+  #HomeLoanDetailTable tr:first-child td {
+    font-family: 'Mark Pro Bold';
+    color: #005b00 !important;
+    padding-bottom: .5rem !important;
+    font-size: 20px;
+  }
+
+  #PersonalLoanDetailTable tr:first-child td {
+    font-family: 'Mark Pro Bold';
+    color: #005b00 !important;
+    padding-bottom: .5rem !important;
+    font-size: 20px;
+  }
+
+  .ExplanatoryNotes {
+    font-family: 'Mark Pro Regular';
+    font-size: 14px;
   }
 
   .main-container, .main-container-machine {
