--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -525,21 +525,20 @@
   }
 
   .ftr-lt-span1 {
-    float: left;
-    margin-left: 35px;
+    margin-left: 40px;
     color: #005b00 !important;
     margin-top: 5px;
   }
 
   .ftr-rt-span1 {
     float: right;
-    margin-right: 35px;
+    margin-right: 40px;
     margin-top: 10px;
   }
 
   .ftr-rt-span2 {
     float: right;
-    margin-right: 35px;
+    margin-right: 40px;
     color: #f3f3f3;
     font-size: 7pt;
     font-family: 'Mark Pro Regular'
@@ -611,6 +610,36 @@
   .ExplanatoryNotes {
     font-family: 'Mark Pro Regular';
     font-size: 8pt;
+  }
+
+  .LoanAmountDetailsDiv {
+    background-color: #2d6444 !important;
+    padding: 5px 25px;
+    height: 60px;
+    color: #fff !important;
+    font-family: 'Mark Pro Regular';
+  }
+
+  .NedbankPersonalLoanTxt {
+    color: #005b00 !important;
+    font-family: 'Mark Pro Bold' !important;
+    font-size: 12pt !important;
+  }
+
+  .LoanTransactionTable tbody tr:nth-of-type(odd) {
+    background-color: #f3f3f3 !important;
+  }
+
+  .SpecialMessageDiv {
+    font-family: 'Mark Pro Regular';
+    font-size: 8pt;
+  }
+
+  .CustomerCellNoDiv {
+    font-size: 8pt;
+    font-family: 'Mark Pro Medium';
+    text-align: left;
+    padding-left: 1.25rem;
   }
 
   .main-container, .main-container-machine {
