changes related to html to pdf conversion process for nedbank client statement

--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -515,7 +515,7 @@
   }
 
   .ftr {
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
     background-color: white;
     width: 100%;
@@ -525,20 +525,21 @@
   }
 
   .ftr-lt-span1 {
-    margin-left: 40px;
+    float:left;
+    margin-left: 1.75rem !important;
     color: #005b00 !important;
     margin-top: 5px;
   }
 
   .ftr-rt-span1 {
     float: right;
-    margin-right: 40px;
+    margin-right: 1.75rem !important;
     margin-top: 10px;
   }
 
   .ftr-rt-span2 {
     float: right;
-    margin-right: 40px;
+    margin-right: 1.75rem !important;
     color: #f3f3f3;
     font-size: 7pt;
     font-family: 'Mark Pro Regular'
