--- a/API/Resources/css/ltr.css
+++ b/API/Resources/css/ltr.css
@@ -2,21 +2,21 @@
     font-family: 'Mark Pro Regular';
     font-style: normal;
     font-weight: normal;
-    src: local('Mark Pro Regular'), url('../fonts/MARKPRO.woff') format('woff');
+    src: local('Mark Pro Regular'), url('./MARKPRO.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Mark Pro Medium';
     font-style: normal;
     font-weight: normal;
-    src: local('Mark Pro Medium'), url('../fonts/MARKPROMEDIUM.woff') format('woff');
+    src: local('Mark Pro Medium'), url('./MARKPROMEDIUM.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Mark Pro Bold';
     font-style: normal;
     font-weight: normal;
-    src: local('Mark Pro Bold'), url('../fonts/MARKPROBOLD.woff') format('woff');
+    src: local('Mark Pro Bold'), url('./MARKPROBOLD.woff') format('woff');
 }
   
 .show-sidebar .nav-icon,
@@ -515,7 +515,7 @@
 }
 
 .ftr {
-    position: fixed;
+    /*position: fixed;*/
     bottom: 0;
     background-color: white;
     width: 100%;
@@ -525,20 +525,21 @@
 }
 
 .ftr-lt-span1 {
-    margin-left: 40px;
+    float:left;
+    margin-left: 1.75rem !important;
     color: #005b00 !important;
     margin-top: 5px;
 }
 
 .ftr-rt-span1 {
     float: right;
-    margin-right: 40px;
+    margin-right: 1.75rem !important;
     margin-top: 10px;
 }
 
 .ftr-rt-span2 {
     float: right;
-    margin-right: 40px;
+    margin-right: 1.75rem !important;
     color: #f3f3f3;
     font-size: 7pt;
     font-family: 'Mark Pro Regular'
