nedbank statement footer text message related changes

--- a/API/Resources/css/ltr.css
+++ b/API/Resources/css/ltr.css
@@ -540,7 +540,7 @@
 .ftr-rt-span2 {
     float: right;
     margin-right: 1.75rem !important;
-    color: #f3f3f3;
+    color: #666666;
     font-size: 7pt;
     font-family: 'Mark Pro Regular'
 }
