--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -525,7 +525,7 @@
   }
 
   .ftr-lt-span1 {
-    float:left;
+    float: left;
     margin-left: 1.75rem !important;
     color: #005b00 !important;
     margin-top: 5px;
@@ -540,7 +540,7 @@
   .ftr-rt-span2 {
     float: right;
     margin-right: 1.75rem !important;
-    color: #f3f3f3;
+    color: #666666;
     font-size: 7pt;
     font-family: 'Mark Pro Regular'
   }
