--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -387,6 +387,13 @@
     padding: 0px 25px;
   }
 
+  .payment-due-header {
+    font-size: 12pt;
+    color: #005b00 !important;
+    font-family: 'Mark Pro Regular';
+    padding: 0px 25px;
+  }
+
   .card-body-sub-header2 {
     font-size: 10pt;
     font-family: 'Mark Pro Regular';
@@ -421,8 +428,16 @@
     width: 12%;
   }
 
+  .w-13 {
+    width: 13%;
+  }
+
   .w-15 {
     width: 15%;
+  }
+
+  .w-35 {
+    width: 35%;
   }
 
   .w-40 {
@@ -615,7 +630,7 @@
 
   .LoanAmountDetailsDiv {
     background-color: #2d6444 !important;
-    padding: 5px 25px;
+    padding: 10px 25px;
     height: 60px;
     color: #fff !important;
     font-family: 'Mark Pro Regular';
@@ -633,7 +648,25 @@
 
   .SpecialMessageDiv {
     font-family: 'Mark Pro Regular';
+    font-size: 9pt;
+  }
+
+  .SpecialMessageHeader {
+    font-size: 9pt;
+    font-family: 'Mark Pro Medium';
+  }
+
+  .SpecialMessageDiv p {
+    margin-bottom: 0.25rem !important;
+  }
+
+  .InsuranceMessageDiv {
+    font-family: 'Mark Pro Regular';
     font-size: 8pt;
+  }
+
+  .InsuranceMessageDiv p {
+    margin-bottom: 0.25rem !important;
   }
 
   .CustomerCellNoDiv {
