--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -31,12 +31,12 @@
                   'fa-address-card-o' : widget.WidgetName == 'AccountInformation',
                   'fa-image fa-lg' : widget.WidgetName == 'Image',
                   'icon-videoWidget' : widget.WidgetName == 'Video',
-                  'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'Summary' || widget.WidgetName == 'BreakdownOfInvestmentAccounts' || widget.WidgetName == 'PersonalLoanDetail' || widget.WidgetName == 'PersonalLoanTotalAmountDetail',
+                  'icon-widget-single-column2 fa-lg' : widget.WidgetName == 'Summary' || widget.WidgetName == 'BreakdownOfInvestmentAccounts' || widget.WidgetName == 'PersonalLoanDetail' || widget.WidgetName == 'PersonalLoanTotalAmountDetail' || widget.WidgetName == 'HomeLoanTotalAmountDetail',
                   'fa-bell-o' : widget.WidgetName == 'ReminderaAndRecommendation' || widget.WidgetName == 'SpecialMessage',
                   'icon-rp-loss1 fa-lg' : widget.WidgetName == 'InvestmentPortfolioRisk',
                   'icon-AnalyticsWidget' : widget.WidgetName == 'Analytics',
                   'icon-AvailableBalanceWidget' : widget.WidgetName == 'SavingAvailableBalance' || widget.WidgetName == 'CurrentAvailableBalance' || widget.WidgetName == 'PersonalLoanPaymentDue',
-                  'icon-widget-multi-column2' : widget.WidgetName == 'SavingTransaction' || widget.WidgetName == 'InvestmentPortfolioStatement' || widget.WidgetName == 'PersonalLoanTransaction' || widget.WidgetName == 'PersonalLoanAccountsBreakdown',
+                  'icon-widget-multi-column2' : widget.WidgetName == 'SavingTransaction' || widget.WidgetName == 'InvestmentPortfolioStatement' || widget.WidgetName == 'PersonalLoanTransaction' || widget.WidgetName == 'PersonalLoanAccountsBreakdown' || widget.WidgetName == 'HomeLoanAccountsBreakdown',
                   'icon-widget-line-chart2' : widget.WidgetName == 'SavingTrend' || widget.WidgetName == 'InvestorPerformance',
                   'icon-TransactionMixWidget' : widget.WidgetName == 'TransactionMix',
                   'icon-rp-production1' : widget.WidgetName == 'SpendingTrend',
@@ -45,8 +45,8 @@
                   'icon-rp-quality1' : widget.WidgetName == 'Top4IncomeSources',
                   'fa-university' : widget.WidgetName == 'BranchDetails',
                   'fa-list' : widget.WidgetName == 'ExplanatoryNotes',
-                  'fa-exclamation-circle' : widget.WidgetName == 'PL_InsuranceMessage',
-                  'fa-table fa-lg': widget.WidgetType == 'Table',
+                  'fa-exclamation-circle' : widget.WidgetName == 'PL_InsuranceMessage'  || widget.WidgetName == 'HomeLoanPaymentDueSpecialMsg',
+                  'fa-table fa-lg': widget.WidgetType == 'Table' || widget.WidgetName == 'HomeLoanInstalmentDetail',
                   'fa-list-alt fa-lg': widget.WidgetType == 'Form',
                   'fa-code fa-lg': widget.WidgetType == 'Html',
                   'fa-bar-chart fa-lg': widget.WidgetType == 'BarGraph',
