home loan statement generation process added

--- a/API/Resources/css/ltr.css
+++ b/API/Resources/css/ltr.css
@@ -724,6 +724,11 @@
     color: #fff !important;
 }
 
+    .PaymentDueSpecialMessageDiv p {
+        margin-bottom: 0.25rem !important;
+    }
+
+
 .Homeloan-nav-tabs {
     font-family: 'Mark Pro Regular';
 }
