--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -729,6 +729,10 @@
     color: #fff !important;
   }
 
+  .PaymentDueSpecialMessageDiv p {
+    margin-bottom: 0.25rem !important;
+  }
+
   .Homeloan-nav-tabs {
     font-family: 'Mark Pro Regular';
   }
