portfolio statement generation functionality added

--- a/API/Resources/css/site.css
+++ b/API/Resources/css/site.css
@@ -2152,8 +2152,16 @@
         width: 12%;
     }
 
+    .w-13 {
+        width: 13%;
+    }
+
     .w-15 {
         width: 15%;
+    }
+
+    .w-35 {
+        width: 35%;
     }
 
     .w-40 {
