2265: Investment: Investment Porfolio Statement: GUI

--- a/App/ClientApp/src/assets/content/ltr.scss
+++ b/App/ClientApp/src/assets/content/ltr.scss
@@ -396,6 +396,13 @@
     color: #2d6444 !important;
   }
 
+  .card-body-header-name {
+    font-size: 14pt;
+    color: #2d6444 !important;
+    font-weight: bolder;
+    font-family: sans-serif;
+  }
+
   .card-body-sub-header {
     font-size: 12pt;
     color: #005b00 !important;
